# roneai

./: Cargo.toml  README.md
examples/: Cargo.toml
examples/src/: main.rs
scripts/: build.sh
server/: Cargo.toml
server/src/: lib.rs  rmcp_server.rs
