[package]
name = "roneai-mcp-server-example"
version = "0.1.0"
edition = "2021"
authors = ["Samsung Electronics Co., Ltd"]
description = "Example daemon using the roneai MCP server facade"
license = "Apache-2.0"

[[bin]]
name = "roneai_mcp_server"
path = "src/main.rs"

[dependencies]
roneai-mcp-server = { path = "../server" }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
log = "0.4"
env_logger = "0.11"
